[package]
name = "key2pem"
version = "0.1.0"
edition = "2024"
authors = ["Stiff-Rock <yaguitor@gmail.com>"]

[workspace]
members = [
  "src/auth-git2-pem",
]

[dependencies]
auth-git2-pem = { path = "src/auth-git2-pem", features = ["log"] }

dirs = "6.0.0"
log = "0.4.27"
fern={version = "0.7.1", features = ["colored"]}
